@@ -1,15 +1,0 @@
-Source: #PACKAGE#
-Section: unknown
-Priority: extra
-Maintainer: #USERNAME# <#EMAIL#>
-Build-Depends: #BUILD_DEPS#
-Standards-Version: #POLICY#
-Homepage: <insert the upstream URL, if relevant>
-#Vcs-Git: git://git.debian.org/collab-maint/#PACKAGE#.git
-#Vcs-Browser: http://git.debian.org/?p=collab-maint/#PACKAGE#.git;a=summary
-
-Package: #PACKAGE#
-Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: <insert up to 60 chars description>
- <insert long description, indented with spaces>
